--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.5.2",
     "mongoose-paginate-v2": "^1.7.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.8.0",
     "supertest": "^6.2.4",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
